# bifrost

./: .env.debug  .env.example  .env.test.example  .gitattributes  .gitignore  .kodiak.toml  .sonarcloud.properties  =2.0.0  AGENTS.md  CLAUDE.md  CODEX_SESSION_NOTES.md  CONTRIBUTING.md  DEPLOYMENT.md  Initialize-Bifrost.ps1  PRE_EXISTING_TEST_FAILURES.md  README.md  SECURITY.md  build.sh  debug.sh  docker-compose.debug.port.yml  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.docs.yml  docker-compose.test.yml  docker-compose.yml  plan.md  pyproject.toml  requirements.txt  setup.sh  sonar-project.properties  test.sh
.bifrost/: apps.yaml  integrations.yaml  workflows.yaml
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.planning/: PROJECT.md
.plans/: 2026-01-03-voice-channel-design.md  app-builder-unification-exportability.md  fix-platform-admin-logic.md  forms-agents-type-unification.md  github-sync-portable-refs.md  (+5 more)
api/bifrost/: __init__.py  _context.py  _execution_context.py  _internal.py  _logging.py  _sync.py  _version_notice.py  _workspace_lock.py  _write_buffer.py  agents.py  ai.py  api.py  cli.py  client.py  config.py  contract_version.py  credentials.py  decorators.py  dto_flags.py  email.py  events.py  executions.py  files.py  forms.py  git_commands.py  integration_definition.py  integrations.py  knowledge.py  manifest.py  migrate_imports.py  models.py  oauth.py  organizations.py  platform_names.py  portable.py  pyproject.toml  refs.py  roles.py  skill.py  solution_descriptor.py  (+6 more)
api/bifrost/commands/: __init__.py  agents.py  apps.py  base.py  claims.py  configs.py  events.py  files.py  forms.py  import_cmd.py  integrations.py  orgs.py  requirements.py  roles.py  solution.py  tables.py  workflows.py
api/bifrost/contracts/: __init__.py  agents.py  applications.py  claims.py  enums.py  events.py  forms.py  organizations.py  tables.py  workflows.py
api/bifrost/solution_dev/: __init__.py  app_select.py  function_host.py  proxy.py  reload.py  scaffold_check.py
api/bifrost/tui/: sync_app.py  theme.py  watch.py
api/bifrost_sdk/: __init__.py  __main__.py  cli.py  config.py  decorators.py  files.py  log.py  pyproject.toml
(+2741 files in other folders)
