[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bifrost"
version = "0.0.0+source"
description = "Bifrost SDK - Workflow automation SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.24.0",
    "pathspec>=0.11.0",
    "pydantic>=2.0.0",
    "watchdog>=4.0.0",
    "PyYAML>=6.0",
    "websockets>=12.0",
    "textual>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
bifrost = "bifrost.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bifrost*"]
