[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bifrost-sdk"
version = "1.0.0"
description = "Bifrost SDK for local development and workflow execution"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
bifrost = "bifrost_sdk.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bifrost_sdk*"]

[tool.setuptools.package-data]
bifrost_sdk = ["py.typed"]
